--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,55 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+
+    <dimen name="pading_0.5">0.5dp</dimen>
+    <dimen name="pading_1">1dp</dimen>
+    <dimen name="pading_2">2dp</dimen>
+    <dimen name="pading_4">4dp</dimen>
+    <dimen name="pading_3">3dp</dimen>
+    <dimen name="pading_5">5dp</dimen>
+    <dimen name="pading_6">6dp</dimen>
+    <dimen name="pading_8">8dp</dimen>
+    <dimen name="pading_10">10dp</dimen>
+    <dimen name="pading_12">12dp</dimen>
+    <dimen name="pading_14">14dp</dimen>
+    <dimen name="pading_16">16dp</dimen>
+    <dimen name="pading_18">18dp</dimen>
+    <dimen name="pading_20">20dp</dimen>
+    <dimen name="pading_22">22dp</dimen>
+    <dimen name="pading_24">24dp</dimen>
+    <dimen name="pading_26">26dp</dimen>
+    <dimen name="pading_28">28dp</dimen>
+    <dimen name="pading_30">30dp</dimen>
+    <dimen name="pading_40">40dp</dimen>
+    <dimen name="pading_46">46dp</dimen>
+    <dimen name="pading_50">50dp</dimen>
+    <dimen name="pading_60">60dp</dimen>
+    <dimen name="pading_80">80dp</dimen>
+    <dimen name="pading_100">100dp</dimen>
+    <dimen name="pading_120">120dp</dimen>
+    <dimen name="pading_140">140dp</dimen>
+    <dimen name="pading_160">160dp</dimen>
+    <dimen name="pading_180">180dp</dimen>
+    <dimen name="pading_200">200dp</dimen>
+    <dimen name="pading_240">240dp</dimen>
+    <dimen name="pading_260">260dp</dimen>
+    <dimen name="pading_280">280dp</dimen>
+    <dimen name="pading_300">300dp</dimen>
+
+
+    <dimen name="text_size_8sp">8sp</dimen>
+    <dimen name="text_size_10sp">10sp</dimen>
+    <dimen name="text_size_11sp">11sp</dimen>
+    <dimen name="text_size_12sp">12sp</dimen>
+    <dimen name="text_size_13sp">13sp</dimen>
+    <dimen name="text_size_14sp">14sp</dimen>
+    <dimen name="text_size_15sp">15sp</dimen>
+    <dimen name="text_size_16sp">16sp</dimen>
+    <dimen name="text_size_18sp">18sp</dimen>
+    <dimen name="text_size_20sp">20sp</dimen>
+    <dimen name="text_size_30sp">30sp</dimen>
+
+
 </resources>
