--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,19 @@
     <color name="home_bottom_checked_false">#575757</color>
     <color name="Background">#f4f1f1</color>
 
+
+
+    <color name="white">#ffffff</color>
+    <color name="text_color">#646464</color>
+    <color name="text_color_alp">#bb646464</color>
+    <color name="blue">#4BCEAE</color>
+    <color name="blue_p">#05a880</color>
+    <color name="red">#ca1f1f</color>
+    <color name="red_p">#880303</color>
+    <color name="gre">#05a841</color>
+    <color name="zi">#7205cc</color>
+    <color name="yellow">#f2c039</color>
+    <color name="yellow_p">#e1a604</color>
+    <color name="food_itme">#ece5e5</color>
+    <color name="qrcode">#ece5e5</color>
 </resources>
