--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,40 +4,80 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
 
-    <dimen name="pading_0.5">0.5dp</dimen>
-    <dimen name="pading_1">1dp</dimen>
-    <dimen name="pading_2">2dp</dimen>
-    <dimen name="pading_4">4dp</dimen>
-    <dimen name="pading_3">3dp</dimen>
-    <dimen name="pading_5">5dp</dimen>
-    <dimen name="pading_6">6dp</dimen>
-    <dimen name="pading_8">8dp</dimen>
-    <dimen name="pading_10">10dp</dimen>
-    <dimen name="pading_12">12dp</dimen>
-    <dimen name="pading_14">14dp</dimen>
-    <dimen name="pading_16">16dp</dimen>
-    <dimen name="pading_18">18dp</dimen>
-    <dimen name="pading_20">20dp</dimen>
-    <dimen name="pading_22">22dp</dimen>
-    <dimen name="pading_24">24dp</dimen>
-    <dimen name="pading_26">26dp</dimen>
-    <dimen name="pading_28">28dp</dimen>
-    <dimen name="pading_30">30dp</dimen>
-    <dimen name="pading_40">40dp</dimen>
-    <dimen name="pading_46">46dp</dimen>
-    <dimen name="pading_50">50dp</dimen>
-    <dimen name="pading_60">60dp</dimen>
-    <dimen name="pading_80">80dp</dimen>
-    <dimen name="pading_100">100dp</dimen>
-    <dimen name="pading_120">120dp</dimen>
-    <dimen name="pading_140">140dp</dimen>
-    <dimen name="pading_160">160dp</dimen>
-    <dimen name="pading_180">180dp</dimen>
-    <dimen name="pading_200">200dp</dimen>
-    <dimen name="pading_240">240dp</dimen>
-    <dimen name="pading_260">260dp</dimen>
-    <dimen name="pading_280">280dp</dimen>
-    <dimen name="pading_300">300dp</dimen>
+    <dimen name="pading_0.5">0.5px</dimen>
+    <dimen name="pading_1">1px</dimen>
+    <dimen name="pading_2">2px</dimen>
+    <dimen name="pading_4">4px</dimen>
+    <dimen name="pading_3">3px</dimen>
+    <dimen name="pading_5">5px</dimen>
+    <dimen name="pading_6">6px</dimen>
+    <dimen name="pading_7">7px</dimen>
+    <dimen name="pading_8">8px</dimen>
+    <dimen name="pading_9">9px</dimen>
+    <dimen name="pading_10">10px</dimen>
+    <dimen name="pading_11">11px</dimen>
+    <dimen name="pading_12">12px</dimen>
+    <dimen name="pading_13">13px</dimen>
+    <dimen name="pading_14">14px</dimen>
+    <dimen name="pading_15">15px</dimen>
+    <dimen name="pading_16">16px</dimen>
+    <dimen name="pading_17">17px</dimen>
+    <dimen name="pading_18">18px</dimen>
+    <dimen name="pading_20">20px</dimen>
+    <dimen name="pading_22">22px</dimen>
+    <dimen name="pading_24">24px</dimen>
+    <dimen name="pading_26">26px</dimen>
+    <dimen name="pading_28">28px</dimen>
+    <dimen name="pading_30">30px</dimen>
+    <dimen name="pading_40">40px</dimen>
+    <dimen name="pading_46">46px</dimen>
+    <dimen name="pading_50">50px</dimen>
+    <dimen name="pading_60">60px</dimen>
+    <dimen name="pading_80">80px</dimen>
+    <dimen name="pading_100">100px</dimen>
+    <dimen name="pading_120">120px</dimen>
+    <dimen name="pading_140">140px</dimen>
+    <dimen name="pading_160">160px</dimen>
+    <dimen name="pading_180">180px</dimen>
+    <dimen name="pading_200">200px</dimen>
+    <dimen name="pading_240">240px</dimen>
+    <dimen name="pading_260">260px</dimen>
+    <dimen name="pading_280">280px</dimen>
+    <dimen name="pading_300">300px</dimen>
+    <!--<dimen name="pading_0.5">0.5dp</dimen>-->
+    <!--<dimen name="pading_1">1dp</dimen>-->
+    <!--<dimen name="pading_2">2dp</dimen>-->
+    <!--<dimen name="pading_4">4dp</dimen>-->
+    <!--<dimen name="pading_3">3dp</dimen>-->
+    <!--<dimen name="pading_5">5dp</dimen>-->
+    <!--<dimen name="pading_6">6dp</dimen>-->
+    <!--<dimen name="pading_8">8dp</dimen>-->
+    <!--<dimen name="pading_10">10dp</dimen>-->
+    <!--<dimen name="pading_12">12dp</dimen>-->
+    <!--<dimen name="pading_14">14dp</dimen>-->
+    <!--<dimen name="pading_16">16dp</dimen>-->
+    <!--<dimen name="pading_18">18dp</dimen>-->
+    <!--<dimen name="pading_20">20dp</dimen>-->
+    <!--<dimen name="pading_22">22dp</dimen>-->
+    <!--<dimen name="pading_24">24dp</dimen>-->
+    <!--<dimen name="pading_26">26dp</dimen>-->
+    <!--<dimen name="pading_28">28dp</dimen>-->
+    <!--<dimen name="pading_30">30dp</dimen>-->
+    <!--<dimen name="pading_40">40dp</dimen>-->
+    <!--<dimen name="pading_46">46dp</dimen>-->
+    <!--<dimen name="pading_50">50dp</dimen>-->
+    <!--<dimen name="pading_60">60dp</dimen>-->
+    <!--<dimen name="pading_80">80dp</dimen>-->
+    <!--<dimen name="pading_100">100dp</dimen>-->
+    <!--<dimen name="pading_120">120dp</dimen>-->
+    <!--<dimen name="pading_140">140dp</dimen>-->
+    <!--<dimen name="pading_160">160dp</dimen>-->
+    <!--<dimen name="pading_180">180dp</dimen>-->
+    <!--<dimen name="pading_200">200dp</dimen>-->
+    <!--<dimen name="pading_240">240dp</dimen>-->
+    <!--<dimen name="pading_260">260dp</dimen>-->
+    <!--<dimen name="pading_280">280dp</dimen>-->
+    <!--<dimen name="pading_300">300dp</dimen>-->
 
 
     <dimen name="text_size_8sp">8sp</dimen>
@@ -51,6 +91,7 @@
     <dimen name="text_size_18sp">18sp</dimen>
     <dimen name="text_size_20sp">20sp</dimen>
     <dimen name="text_size_30sp">30sp</dimen>
+    <dimen name="pading_48">48px</dimen>
 
 
 </resources>
