--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -9,7 +9,7 @@
     <item
         android:id="@+id/navigation_dashboard"
         android:icon="@drawable/ic_order_management"
-        android:title="@string/rdermanagement" />
+        android:title="@string/ordermanagement" />
 
     <item
         android:id="@+id/navigation_msg"
