--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -1,10 +1,71 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.yunyou.yike.home.HomeFragment">
-    <TextView
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#100cec"/>
-</FrameLayout>
+        android:layout_height="wrap_content"
+        android:background="@color/app_color"
+        >
+
+        <ImageView
+            android:id="@+id/order_loaction_iv"
+            android:layout_width="19px"
+            android:layout_height="26px"
+            android:layout_marginLeft="20px"
+            android:layout_marginTop="47px"
+            app:srcCompat="@drawable/ic_loaction"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="48px"
+            android:layout_marginLeft="11px"
+            android:layout_marginTop="48px"
+            android:layout_toRightOf="@+id/order_loaction_iv"
+            android:text="@string/app_name"
+            android:textColor="@color/white"
+            android:textSize="25px"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:orientation="horizontal"
+            android:paddingTop="35px">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/yikezhuangshi"/>
+
+        </LinearLayout>
+    </RelativeLayout>
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/order_tablayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:tabBackground="@color/white"
+        app:tabGravity="fill"
+        app:tabIndicatorColor="@color/app_color"
+        app:tabIndicatorHeight="6px"
+        app:tabMode="fixed"
+        app:tabSelectedTextColor="@color/app_color"
+        app:tabTextColor="@color/text_color"
+        />
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/order_viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="8px"
+        android:layout_weight="1"/>
+
+
+</LinearLayout>
