--- a/app/src/main/res/layout/top_title.xml
+++ b/app/src/main/res/layout/top_title.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:background="@color/app_color"
-                android:orientation="vertical">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="48dp"
+              android:background="@color/app_color"
+              android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/title_ivback"
@@ -16,11 +16,39 @@
         app:srcCompat="@drawable/ic_fanhui_back"/>
 
     <TextView
+        android:layout_width="0.5dp"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="16px"
+        android:layout_marginLeft="10px"
+        android:layout_marginRight="40px"
+        android:layout_marginTop="16px"
+        android:background="@color/white"/>
+
+    <TextView
         android:id="@+id/title_tvtitle"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_gravity="center"
+        android:layout_weight="1"
         android:textColor="@color/white"
         android:textSize="@dimen/pading_34"
         tools:text="@string/app_name"/>
-</RelativeLayout>
+
+    <Button
+        android:id="@+id/title_btn"
+        android:visibility="invisible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginRight="20px"
+        android:background="@drawable/title_btn"
+        android:minHeight="0dp"
+        android:minWidth="0dp"
+        android:paddingBottom="14px"
+        android:paddingLeft="36px"
+        android:paddingRight="36px"
+        android:paddingTop="14px"
+        android:text="@string/ok"
+        android:textColor="@color/white"
+        android:textSize="25px"/>
+</LinearLayout>
